fixing the CSS so that each submenu opens a bit more on the right, so it leaves visible the arrow of the parent menu

--- a/themes/sooperfish-theme-glass.css
+++ b/themes/sooperfish-theme-glass.css
@@ -17,7 +17,7 @@ html body ul.sf-menu ul
 width:170px;
 }
 html body ul.sf-menu ul ul {
-margin:0 0 0 140px;
+margin:0 0 0 170px;
 }
 
 /* Theming the menu */
